alignment fixes

--- a/css/preset.css
+++ b/css/preset.css
@@ -92,7 +92,7 @@ p {
   font-size: 17px;
   font-weight: 400;
   font-size: 17px;
-  color: #5e5b5b;
+  color: #000;
   letter-spacing: 0.3px;
   line-height: 1.75;
   margin-top: 35px;
